02_code1/grade.txt
Grading at Wed Aug 26 07:55:48 UTC 2020
Checking code1.c for legal syntax
temp.c:3:28: error: expected ‘;’, ‘,’ or ‘)’ before numeric constant
 int max (int num1, int num 2){ 
                            ^
The code did not have legal syntax!

Overall Grade: F
